Updated button signatures to match the functionality.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     </head>
     <body>
-        <label for="address">Address</label>
+        <label for="address">Specify address:</label>
         <input type="text" id="address" placeholder="Please enter the address.">
-        <button onclick="useAddress()">Request weather</button>
+        <button onclick="useAddress()">What is the weather at the addres?</button>
         <table id="weatherTable">
             <tr><td>Time</td><td>Temperature</td></tr>
         </table>
